<resources>
    <string name="app_name" translatable="false">Clean My Beach</string>
    <string name="report_beach">Reportar Praia</string>
    <string name="show_beach">Ver Praias Reportadas</string>
    <string name="choose_language">Escolher Idioma</string>
    <string name="back">Voltar</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_report_beach">Report de lixo</string>
    <string name="textName">Nome da praia</string>
    <string name="textDescription">O que encontrou?</string>
    <string name="textLocal">Adicionar a localização</string>
    <string name="textPhoto">Adicionar fotografia do lixo</string>
    <string name="buttonCamera">Camera</string>
    <string name="buttonGallery">Galeria</string>
    <string name="buttonCancel">Cancelar</string>
    <string name="buttonCheck">Confirmar</string>
    <string name="confirm_map">Confirmar</string>
    <string name="cancel_map">Cancelar</string>
    <string name="report_list">Lista de Reports</string>
    <string name="Description_history">Descrição</string>
    <string name="Location_history">Localização</string>
    <string name="Back_button_history">Voltar</string>
    <string name="Delete_Report_history">Apagar Report</string>
    <string name="title_activity_maps_history" translatable="false">Map</string>
    <string name="dao_reports">Ver Reports Locais</string>
    <string name="dialog_box_text1">Apagar</string>
    <string name="dialog_box_text2">Pretende apagar este report?</string>
</resources>